# neural-inducing-kernel

./: .gitignore  README.md  pyproject.toml  torch_ciede2000.py  train.py
data/: __init__.py  data_loader.py
kernel_functions/: __init__.py  _debug.py  exponential_kernel.py  kernel_function.py
loss/: __init__.py  _debug.py  abstract_loss.py  deltaE_ciede2000_loss.py  ssim_loss.py
metrics/: __init__.py  delta_e_ciede2000.py  metric.py  ssim_metric.py
module/: __init__.py  resnet.py
old/: requirements.txt
old/kernel/: bspline_big_img.py  bspline_exp.py  bspline_hermite_single1.py  bspline_single.py  bspline_vectorized_old.py  bspline_with_int_weights.py  splines.py
old/model/: precompute_weights.py  precompute_weights_bspline_smos.py
old/preprocessing/: ptcolor.py  single_snapshot.py
old/train/: s1_experiments.o4676419  s1_experiments.o4680301  s1_experiments.o4752255  test2.py  test3.py  train2.py  train_axes.py
